src/test/ui/parser/extern-foreign-crate.stderr
error: expected one of `;` or `as`, found `{`
  --> $DIR/extern-foreign-crate.rs:4:18
   |
LL | extern crate foo {}
   |                  ^ expected one of `;` or `as` here

error: aborting due to previous error

